# Aegis-EdgeOS

./: .gitignore  CMakeLists.txt  README.md
hardware_nodes/esp32/: main.cpp  platformio.ini
hardware_nodes/esp32/src/: main.cpp
include/: core.h
public/: index.html  node_config.json
src/: ai.c  main.c  monitor.c  network.c  serial.c
